Příklady transakce a připojení k redis

--- a/DemoRedisCache/DemoRedisCache.csproj
+++ b/DemoRedisCache/DemoRedisCache.csproj
@@ -115,11 +115,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\DemoController.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Entities\Database.cs" />
