--- a/DemoRedisCache/Web.config
+++ b/DemoRedisCache/Web.config
@@ -5,7 +5,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="RediConnectionString" value="127.0.0.1:6379,abortConnect=false" />
+    <add key="RedisConnectionString" value="127.0.0.1:6379,abortConnect=false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
